--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/event_name">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -81,9 +81,10 @@
                             android:layout_height="wrap_content"
                             android:id="@+id/EditEventPublic" />
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
                             android:text="@string/event_public_hint"
-                            android:layout_height="wrap_content" />
+                             />
                     </LinearLayout>
 
 
@@ -158,7 +159,7 @@
                         android:id="@+id/EditEventCalendarHint"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/event_calendar_hint" />
+                        android:text="Calendar url" />
 
                     <EditText
                         android:id="@+id/EditEventCalendar"
@@ -189,10 +190,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/EditEventEmergency" />
+
                         <TextView
-                            android:layout_width="match_parent"
-                            android:text="@string/event_emergency_hint"
-                            android:layout_height="wrap_content" />
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/event_emergency_hint" />
                     </LinearLayout>
 
 
