--- a/app/src/main/res/layout/activity_event_details_page.xml
+++ b/app/src/main/res/layout/activity_event_details_page.xml
@@ -11,19 +11,22 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/event_img_layout"
             android:layout_centerHorizontal="true">
+
             <ImageView
+                android:id="@+id/event_details_img"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:id="@+id/event_details_img"
+                android:layout_centerHorizontal="true"
                 android:src="@mipmap/ic_launcher"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_centerHorizontal="true"
-                tools:ignore="MissingConstraints" />
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="87dp" />
 
             <ImageView
                 android:layout_width="30dp"
@@ -39,59 +42,195 @@
                 android:visibility="invisible"
                 android:id="@+id/event_details_edit_img"
                 android:onClick="onEditImageClicked"/>
+
+            <Button
+                android:id="@+id/invite_organizer_button"
+                android:layout_width="161dp"
+                android:layout_height="50dp"
+                android:layout_gravity="start|top"
+                android:onClick="inviteLinkClicked"
+                android:padding="10dp"
+                android:text="@string/invite_organizer"
+                android:visibility="invisible"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/event_details_submit"
+                android:layout_width="160dp"
+                android:layout_height="51dp"
+                android:layout_gravity="center|bottom"
+                android:onClick="onSubmitChangesClicked"
+                android:padding="10dp"
+                android:text="Submit Changes"
+                android:visibility="invisible"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/invite_organizer_button"/>
+            <Button
+                android:id="@+id/event_details_cancel"
+                android:layout_width="160dp"
+                android:layout_height="51dp"
+                android:layout_gravity="center|bottom"
+                android:onClick="onCancelClicked"
+                android:padding="10dp"
+                android:text="Cancel"
+                android:visibility="invisible"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/event_details_submit"/>
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/event_details_title"
+            android:id="@+id/event_details_title_edit"
             android:text="@string/title"
             android:textSize="22sp"
             android:textColor="#000"
             android:textStyle="bold"
             android:layout_below="@id/event_img_layout"
+            android:visibility="invisible"
             />
+
+        <TextView
+            android:id="@+id/event_details_title"
+            android:layout_width="377dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/event_img_layout"
+            android:layout_marginTop="6dp"
+            android:text="@string/title"
+            android:textColor="#000"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/description"
-            android:id="@+id/event_details_description"
+            android:id="@+id/event_details_description_edit"
             android:textSize="18sp"
             android:textColor="#A9A9A9"
             android:textStyle="bold"
             android:layout_below="@id/event_details_title"
             android:layout_marginTop="5dp"
+            android:visibility="invisible"
             />
 
-        <EditText
-            android:id="@+id/event_details_start"
+        <TextView
+            android:id="@+id/event_details_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
+            android:layout_below="@id/event_details_title"
+            android:layout_marginTop="6dp"
+            android:text="@string/description"
+            android:textColor="#A9A9A9"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/event_details_url_edit"
             android:layout_below="@id/event_details_description"
+            android:layout_width="180dp"
+            android:layout_height="44dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="6dp"
+            android:textColor="#A9A9A9"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="invisible" />
+
+
+        <EditText
+            android:id="@+id/event_details_start_edit"
+
+            android:layout_below="@id/event_details_description"
+            android:layout_width="100dp"
+            android:layout_height="41dp"
+            android:layout_marginTop="5dp"
+            android:ems="10"
+            android:hint="@string/date_format"
+            android:inputType="date"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/event_details_start"
+
+            android:layout_below="@id/event_details_description"
+            android:layout_width="100dp"
+            android:layout_height="41dp"
+            android:layout_marginTop="5dp"
+            android:ems="10"
             android:hint="@string/date_format"
             android:inputType="date" />
 
         <EditText
-            android:id="@+id/event_details_end"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/event_details_end_edit"
+            android:layout_width="100dp"
+            android:layout_height="41dp"
+            android:layout_below="@id/event_details_description"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="5dp"
             android:ems="10"
-            android:layout_below="@id/event_details_start"
+            android:hint="@string/date_format"
+            android:inputType="date"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/event_details_end"
+            android:layout_below="@id/event_details_description"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="5dp"
+            android:layout_width="100dp"
+            android:layout_height="41dp"
+            android:ems="10"
             android:hint="@string/date_format"
             android:inputType="date" />
+        <Spinner
+            android:id="@+id/event_type_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/event_type_list"
+            android:prompt="@string/event_type_hint"
+            android:layout_below="@id/event_details_url_edit"
+            android:visibility="invisible"/>
 
+        <TextView
+            android:id="@+id/event_type"
+            android:layout_width="144dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/event_details_url_edit"
+            android:entries="@array/event_type_list"
+            />
+
+        <Switch
+            android:id="@+id/event_public_edit"
+            android:layout_width="102dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/event_details_url_edit"
+            android:layout_marginLeft="135dp"
+            android:hint="isPublic"
+            android:visibility="invisible"/>
+
+        <Switch
+            android:id="@+id/event_sos_edit"
+            android:layout_width="134dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/event_details_url_edit"
+            android:layout_marginLeft="245dp"
+            android:hint="Emergencies"
+            android:visibility="invisible"/>
         <TextView
             android:id="@+id/EditEventOrganizers"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:text="@string/organizers"
-            android:padding="10dp"
+            android:layout_below="@id/event_type_edit"
+            android:layout_marginTop="4dp"
             android:ems="10"
-            android:layout_below="@id/event_details_end"/>
+            android:padding="10dp"
+            android:text="@string/organizers"
+            android:textAlignment="center"
+            android:textSize="20sp" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -103,24 +242,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         </ScrollView>
-
-        <Button
-            android:id="@+id/invite_organizer_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/organizers_scroll"
-            android:layout_marginTop="10dp"
-            android:text="@string/invite_organizer"
-            android:onClick="inviteLinkClicked"
-            android:visibility="invisible"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/invite_organizer_button"
-            android:text="Submit Changes"
-            android:id="@+id/event_details_submit"
-            android:visibility="invisible"
-            android:onClick="onSubmitChangesClicked" />
 
         <Button
             android:id="@+id/schedule"
