--- a/app/src/main/res/layout/activity_member_invite.xml
+++ b/app/src/main/res/layout/activity_member_invite.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".organizerInvite.OrganizerInviteActivity">
+    tools:context=".eventMemberInvite.EventMemberInviteActivity">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="1."
         android:padding="20dp"
-        android:id="@+id/invite_organizer_parent">
+        android:id="@+id/invite_member_parent">
 
         <TextView
             android:layout_width="match_parent"
@@ -26,7 +26,7 @@
             android:text="@string/organizer_invite_text"
             android:textAlignment="center"
             android:padding="10dp"
-            android:id="@+id/organizer_invite_text"/>
+            android:id="@+id/member_invite_text"/>
 
         <Button
             android:id="@+id/invite_sign_in_button"
