two text fields for editing replaced by one

--- a/app/src/main/res/layout/activity_front_page.xml
+++ b/app/src/main/res/layout/activity_front_page.xml
@@ -65,4 +65,12 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/to_delete"
+        android:onClick="toEditPage"
+        android:layout_below="@id/description"
+        android:text="test"/>
+
 </RelativeLayout>
