--- a/app/src/main/res/layout/activity_event_details_page.xml
+++ b/app/src/main/res/layout/activity_event_details_page.xml
@@ -49,18 +49,6 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/event_details_title_edit"
-                android:text="@string/title"
-                android:textSize="22sp"
-                android:textColor="#000"
-                android:textStyle="bold"
-                android:layout_below="@id/event_img_layout"
-                android:visibility="invisible"
-                />
-
             <TextView
                 android:id="@+id/event_details_title"
                 android:layout_width="377dp"
@@ -72,18 +60,6 @@
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/description"
-                android:id="@+id/event_details_description_edit"
-                android:textSize="18sp"
-                android:textColor="#A9A9A9"
-                android:textStyle="bold"
-                android:layout_below="@id/event_details_title"
-                android:layout_marginTop="5dp"
-                android:visibility="invisible"
-                />
 
             <TextView
                 android:id="@+id/event_details_description"
@@ -109,18 +85,6 @@
                 android:visibility="invisible" />
 
 
-            <EditText
-                android:id="@+id/event_details_start_edit"
-
-                android:layout_below="@id/event_details_description"
-                android:layout_width="100dp"
-                android:layout_height="41dp"
-                android:layout_marginTop="5dp"
-                android:ems="10"
-                android:hint="@string/date_format"
-                android:inputType="date"
-                android:visibility="invisible" />
-
             <TextView
                 android:id="@+id/event_details_start"
 
@@ -132,18 +96,6 @@
                 android:hint="@string/date_format"
                 android:inputType="date" />
 
-            <EditText
-                android:id="@+id/event_details_end_edit"
-                android:layout_width="100dp"
-                android:layout_height="41dp"
-                android:layout_below="@id/event_details_description"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="5dp"
-                android:ems="10"
-                android:hint="@string/date_format"
-                android:inputType="date"
-                android:visibility="invisible" />
-
             <TextView
                 android:id="@+id/event_details_end"
                 android:layout_below="@id/event_details_description"
@@ -154,6 +106,7 @@
                 android:ems="10"
                 android:hint="@string/date_format"
                 android:inputType="date" />
+
             <Spinner
                 android:id="@+id/event_type_edit"
                 android:layout_width="wrap_content"
@@ -192,7 +145,7 @@
                 android:id="@+id/EditEventOrganizers"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/event_type_edit"
+                android:layout_below="@id/event_type"
                 android:layout_marginTop="4dp"
                 android:ems="10"
                 android:padding="10dp"
