--- a/app/src/main/res/layout/activity_event_details_page.xml
+++ b/app/src/main/res/layout/activity_event_details_page.xml
@@ -214,7 +214,7 @@
             android:id="@+id/invite_organizer_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/organizers_recycler_view"
+            android:layout_below="@+id/organizers_scroll"
             android:layout_marginTop="10dp"
             android:text="@string/invite_organizer"
             android:onClick="organizerInviteLinkClicked"
@@ -230,17 +230,21 @@
             android:padding="10dp"
             android:ems="10"
             android:layout_below="@id/invite_organizer_button"/>
-
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/EditEventSecurity"
+            android:id="@+id/security_scroll">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/security_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/EditEventSecurity"/>
+            android:layout_height="wrap_content" />
+        </ScrollView>
         <Button
             android:id="@+id/invite_security_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/organizers_recycler_view"
+            android:layout_below="@+id/security_scroll"
             android:layout_marginTop="10dp"
             android:text="@string/invite_security"
             android:onClick="securityInviteLinkClicked"
