--- a/app/src/main/res/layout/activity_event_details_page.xml
+++ b/app/src/main/res/layout/activity_event_details_page.xml
@@ -222,12 +222,23 @@
             android:visibility="invisible"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/revoke_organizer_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/invite_organizer_button"
+            android:onClick="revokeClicked"
+            android:padding="10dp"
+            android:text="@string/revoke_organizer"
+            android:visibility="invisible"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/event_details_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/invite_organizer_button"
+            android:layout_below="@+id/revoke_organizer_button"
             android:onClick="onSubmitChangesClicked"
             android:padding="10dp"
             android:text="Submit Changes"
