--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,16 @@
         android:padding="10dp"
         android:text="@string/event_details" />
 
+    <Button
+        android:id="@+id/butLocations"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|bottom"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="20dp"
+        android:padding="10dp"
+        android:onClick="onUpdateLocationsCliked"
+        android:text="update locations" />
 
     <Button
         android:id="@+id/butLeft"
