--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -24,16 +24,25 @@
         android:textSize="20dp"
         app:layout_constraintTop_toBottomOf="@+id/feed_name"
         app:layout_constraintLeft_toLeftOf="parent"/>
+    <Button
+        android:id="@+id/feed_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text ="Refresh"
+        android:onClick="onRefreshClicked"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/feed_explanation"/>
 
     <ScrollView
 
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="140dp"
         android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toTopOf="@+id/feed_message_input"
-        app:layout_constraintTop_toBottomOf="@+id/feed_explanation">
+        app:layout_constraintTop_toBottomOf="@+id/feed_refresh">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/feedListRecyclerView"
