--- a/app/src/main/res/layout/activity_front_page.xml
+++ b/app/src/main/res/layout/activity_front_page.xml
@@ -9,8 +9,9 @@
         android:id="@+id/frontPageTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/maven_pro"
         android:text="POLY CROWD"
         android:textColor="#000000"
@@ -19,9 +20,9 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="264dp"
+        android:layout_height="256dp"
         android:layout_below="@+id/frontPageTitle"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="29dp"
         android:background="@android:color/transparent"
         android:clipToPadding="false"
         android:foregroundGravity="center"
@@ -32,7 +33,7 @@
     <TextView
         android:id="@+id/description"
         android:layout_width="296dp"
-        android:layout_height="145dp"
+        android:layout_height="128dp"
         android:layout_below="@+id/eventTitle"
         android:layout_alignParentStart="true"
         android:layout_marginStart="34dp"
@@ -45,8 +46,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="23dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginBottom="19dp"
         android:text="LOGIN" />
 
     <TextView
@@ -68,11 +69,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="38dp"
-        android:layout_marginEnd="175dp"
+        android:layout_marginStart="21dp"
         android:layout_marginBottom="19dp"
-        android:layout_toStartOf="@+id/button"
         android:text="@string/profile"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </RelativeLayout>
