converted to ConstraintLayout for better portability,and added back create-group button

--- a/app/src/main/res/layout/activity_groups_list.xml
+++ b/app/src/main/res/layout/activity_groups_list.xml
@@ -1,26 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".groupPage.GroupsListActivity"
-    android:orientation="vertical">
+    tools:context=".groupPage.GroupsListActivity">
 
     <TextView
         android:id="@+id/myGroupsTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginBottom="29dp"
         android:text="@string/my_groups"
         android:textSize="24sp"
-        android:layout_gravity="center_horizontal"/>
+        app:layout_constraintBottom_toTopOf="@+id/groupsListRecyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.762" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/groupsListRecyclerView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp" />
+        android:layout_marginTop="120dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/createGroupButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:onClick="onCreateGroupClicked"
+        android:text="@string/create_new_group_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/groupsListRecyclerView" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
