rename on click method

--- a/app/src/main/res/layout/fragment_group_member_list.xml
+++ b/app/src/main/res/layout/fragment_group_member_list.xml
@@ -38,7 +38,7 @@
         android:layout_below="@+id/invite_group_button"
         android:layout_marginTop="10dp"
         android:text="@string/leave_group"
-        android:onClick="leaveLinkClicked"/>
+        android:onClick="onLeaveLinkClick"/>
 
 
 </LinearLayout>
