--- a/app/src/main/res/layout/fragment_group_member_list.xml
+++ b/app/src/main/res/layout/fragment_group_member_list.xml
@@ -22,6 +22,8 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="26dp" />
 
+
+
     <Button
         android:id="@+id/invite_group_button"
         android:layout_width="match_parent"
@@ -31,6 +33,8 @@
         android:text="@string/invite_group"
         android:onClick="inviteLinkClicked"/>
 
+
+
     <Button
         android:id="@+id/leave_group_button"
         android:layout_width="match_parent"
@@ -39,6 +43,13 @@
         android:layout_marginTop="10dp"
         android:text="@string/leave_group"
         android:onClick="onLeaveLinkClick"/>
+
+    <Button
+        android:id="@+id/go_to_map_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Go to map"
+        android:onClick="onGoToMapClick"/>
 
 
 </LinearLayout>
