--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,12 @@
         android:padding="10dp"
         android:text="Feed"
         android:onClick="onFeedClicked"/>
+    <Button
+        android:onClick="onClickShowPopup"
+        android:textColor="@color/white"
+        android:text="show popup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
